--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
