--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "lucide": "^0.469.0",
     "lucide-react": "^0.469.0",
+    "motion": "^11.15.0",
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
