--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-jihostudy": "^0.0.6",
     "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
